# CSAT-forms

./: .env.example  .gitignore  COMPLETE_SETUP_GUIDE.md  ClientPulse_API.postman_collection.json  Dockerfile  MANUAL_SETUP.md  README.md  alembic.ini  bash  docker-compose.backup.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
app/: __init__.py  config.py  database.py  main.py
app/api/: __init__.py  admin.py  analytics.py  feedback.py
app/core/: __init__.py  s3.py  security.py
app/models/: __init__.py  admin.py  feedback.py
app/schemas/: __init__.py  admin.py  analytics.py  feedback.py
app/utils/: __init__.py  dependencies.py
nginx/: nginx.conf
nginx/conf.d/: default.conf
