[tool.poetry]
name = "clientpulse"
version = "0.1.0"
description = "CSAT Feedback Collection and Analytics System"
authors = ["Dinesh Kingston <your-email@example.com>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
pymysql = "^1.1.0"
alembic = "^1.13.1"
pydantic = {extras = ["email"], version = "^2.12.5"}
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
boto3 = "^1.34.34"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
email-validator = "^2.3.0"
form = "^0.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
